--- a/TornCityAPISharp.csproj
+++ b/TornCityAPISharp.csproj
@@ -50,6 +50,7 @@
     <Compile Include="API.cs" />
     <Compile Include="EventsStatistics.cs" />
     <Compile Include="EventsStats\EventsBase.cs" />
+    <Compile Include="FactionStatistics.cs" />
     <Compile Include="GeneralStatistics.cs" />
     <Compile Include="Miscellaneous.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -76,6 +77,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="FactionStats\" />
     <Folder Include="GymStats\" />
     <Folder Include="PropertyStats\" />
   </ItemGroup>
