Full Faction Api Support With new Generic System to call the api (dropping the call in the middle.
Adding a unit test project to Automaticly test the Faction API methods

--- a/TornCityAPISharp.csproj
+++ b/TornCityAPISharp.csproj
@@ -49,11 +49,31 @@
   <ItemGroup>
     <Compile Include="API.cs" />
     <Compile Include="CustomJsonConverter\ArrayOrDictionaryConverter.cs" />
+    <Compile Include="FactionStats\FactionMethods.cs" />
+    <Compile Include="Enums\Fields.cs" />
     <Compile Include="EventsStats\Event.cs" />
     <Compile Include="EventsStats\EventsBase.cs" />
-    <Compile Include="FactionStatistics.cs" />
+    <Compile Include="FactionStats\Event.cs" />
+    <Compile Include="FactionStats\FactionArmor.cs" />
     <Compile Include="FactionStats\FactionBasic.cs" />
-    <Compile Include="FactionStats\FactionMember.cs" />
+    <Compile Include="FactionStats\FactionBoosters.cs" />
+    <Compile Include="FactionStats\FactionCesium.cs" />
+    <Compile Include="FactionStats\FactionCurrency.cs" />
+    <Compile Include="FactionStats\FactionDrugs.cs" />
+    <Compile Include="FactionStats\FactionArmoryNews.cs" />
+    <Compile Include="FactionStats\FactionArmoryNewsFull.cs" />
+    <Compile Include="FactionStats\FactionDonationNews.cs" />
+    <Compile Include="FactionStats\FactionDonationNewsFull.cs" />
+    <Compile Include="FactionStats\FactionAttackNewsFull.cs" />
+    <Compile Include="FactionStats\FactionAttackNews.cs" />
+    <Compile Include="FactionStats\FactionMainNewsFull.cs" />
+    <Compile Include="FactionStats\FactionMainNews.cs" />
+    <Compile Include="FactionStats\FactionMedical.cs" />
+    <Compile Include="FactionStats\Member.cs" />
+    <Compile Include="FactionStats\FactionTemporary.cs" />
+    <Compile Include="FactionStats\FactionWeapon.cs" />
+    <Compile Include="FactionStats\FactionStatistics.cs" />
+    <Compile Include="FactionStats\Item.cs" />
     <Compile Include="TornApiWrapper.cs" />
     <Compile Include="Utils\ApiCaller.cs" />
     <Compile Include="Utils\GetObjectFromUrl.cs" />
