--- a/TornCityAPISharp.csproj
+++ b/TornCityAPISharp.csproj
@@ -89,12 +89,71 @@
     <Compile Include="FactionStats\FactionWeapon.cs" />
     <Compile Include="FactionStats\IFactionStatistics.cs" />
     <Compile Include="FactionStats\Item.cs" />
+    <Compile Include="MarketStats\IMarketStatistics.cs" />
+    <Compile Include="MarketStats\Item.cs" />
+    <Compile Include="MarketStats\MarketMethods.cs" />
+    <Compile Include="MarketStats\MarketPointsMarket.cs" />
+    <Compile Include="MarketStats\MarketItemMarket.cs" />
+    <Compile Include="MarketStats\MarketBazaar.cs" />
+    <Compile Include="MarketStats\Point.cs" />
     <Compile Include="PropertyStats\IPropertyStatistics.cs" />
     <Compile Include="PropertyStats\Property.cs" />
     <Compile Include="PropertyStats\PropertyMethods.cs" />
     <Compile Include="PropertyStats\PropertyProperty.cs" />
     <Compile Include="PropertyStats\Rented.cs" />
     <Compile Include="TornApiWrapper.cs" />
+    <Compile Include="UserStats\Attack.cs" />
+    <Compile Include="UserStats\Bar.cs" />
+    <Compile Include="UserStats\Bazaar.cs" />
+    <Compile Include="UserStats\CityBank.cs" />
+    <Compile Include="UserStats\Company.cs" />
+    <Compile Include="UserStats\Cooldowns.cs" />
+    <Compile Include="UserStats\CriminalRecord.cs" />
+    <Compile Include="UserStats\Display.cs" />
+    <Compile Include="UserStats\Event.cs" />
+    <Compile Include="UserStats\Faction.cs" />
+    <Compile Include="UserStats\HofItem.cs" />
+    <Compile Include="UserStats\Inventory.cs" />
+    <Compile Include="UserStats\IUserStatistics.cs" />
+    <Compile Include="UserStats\Job.cs" />
+    <Compile Include="UserStats\Married.cs" />
+    <Compile Include="UserStats\Message.cs" />
+    <Compile Include="UserStats\Networth.cs" />
+    <Compile Include="UserStats\Notifications.cs" />
+    <Compile Include="UserStats\PersonalStats.cs" />
+    <Compile Include="UserStats\Property.cs" />
+    <Compile Include="UserStats\Stock.cs" />
+    <Compile Include="UserStats\Travel.cs" />
+    <Compile Include="UserStats\UserAttacks.cs" />
+    <Compile Include="UserStats\UserAttacksFull.cs" />
+    <Compile Include="UserStats\UserBars.cs" />
+    <Compile Include="UserStats\UserBasic.cs" />
+    <Compile Include="UserStats\UserBattelStats.cs" />
+    <Compile Include="UserStats\UserBazaar.cs" />
+    <Compile Include="UserStats\UserCooldowns.cs" />
+    <Compile Include="UserStats\UserCriminalRecord.cs" />
+    <Compile Include="UserStats\UserDisplay.cs" />
+    <Compile Include="UserStats\UserEducation.cs" />
+    <Compile Include="UserStats\UserEvents.cs" />
+    <Compile Include="UserStats\UserHof.cs" />
+    <Compile Include="UserStats\UserHonors.cs" />
+    <Compile Include="UserStats\UserIcons.cs" />
+    <Compile Include="UserStats\UserInventory.cs" />
+    <Compile Include="UserStats\UserJobPoints.cs" />
+    <Compile Include="UserStats\UserMedals.cs" />
+    <Compile Include="UserStats\UserMerits.cs" />
+    <Compile Include="UserStats\UserMessages.cs" />
+    <Compile Include="UserStats\UserMethods.cs" />
+    <Compile Include="UserStats\UserMoney.cs" />
+    <Compile Include="UserStats\UserNetworth.cs" />
+    <Compile Include="UserStats\UserNotifications.cs" />
+    <Compile Include="UserStats\UserPerks.cs" />
+    <Compile Include="UserStats\UserPersonalStats.cs" />
+    <Compile Include="UserStats\UserProfile.cs" />
+    <Compile Include="UserStats\UserProperties.cs" />
+    <Compile Include="UserStats\UserStocks.cs" />
+    <Compile Include="UserStats\UserTravel.cs" />
+    <Compile Include="UserStats\UserWorkStats.cs" />
     <Compile Include="Utils\ApiCaller.cs" />
     <Compile Include="Utils\GetObjectFromUrl.cs" />
     <Compile Include="Utils\Miscellaneous.cs" />
@@ -104,13 +163,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="TornGeneralStats\TornGeneralBase.cs" />
-    <Compile Include="PlayerStats\Faction.cs" />
-    <Compile Include="PlayerStats\Icons.cs" />
-    <Compile Include="PlayerStats\Job.cs" />
-    <Compile Include="PlayerStats\Life.cs" />
-    <Compile Include="PlayerStats\Married.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PlayerStats\PlayerBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -119,9 +172,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GymStats\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
