--- a/TornCityAPISharp.csproj
+++ b/TornCityAPISharp.csproj
@@ -21,8 +21,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DocumentationFile>
-    </DocumentationFile>
+    <DocumentationFile>bin\Debug\TornCityAPISharp.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -181,6 +180,7 @@
     </Compile>
     <Compile Include="TornGeneralStats\TornGeneralBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\TornApiToManyRequestException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
